# json-ip-geolocation-sdk

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  SECURITY.md
.sdk/: package-lock.json  package.json
go/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  go.mod  json-ip-geolocation.go
go-cli/: .gitignore  Makefile  README.md  go.mod  main.go  words.go
go-mcp/: .gitignore  Makefile  README.md  go.mod  main.go  tools.go
lua/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  config.lua  features.lua  json-ip-geolocation.rockspec  json-ip-geolocation_sdk.lua  json-ip-geolocation_types.lua
php/: AGENTS.md  (+7 more)
py/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  config.py  features.py  jsonipgeolocation_sdk.py  jsonipgeolocation_types.py  pyproject.toml
py/core/: context.py  control.py  helpers.py  response.py  spec.py  utility_type.py
py/entity/: currencygp_entity.py  jsongp_entity.py
py/feature/: idempotency_feature.py  log_feature.py  metrics_feature.py  netsim_feature.py  rbac_feature.py  telemetry_feature.py  test_feature.py  timeout_feature.py
py/test/: runner.py  test_currencygp_direct.py  test_currencygp_entity.py  test_exists.py  test_jsongp_direct.py  test_jsongp_entity.py  test_netsim.py  test_pipeline.py  test_primary_utility.py  test_readme_examples.py
py/utility/: feature_init.py  fetcher.py  make_context.py  make_error.py  make_fetch_def.py  make_options.py  make_request.py  make_result.py  make_url.py  prepare_auth.py  prepare_headers.py  prepare_method.py  prepare_path.py  prepare_query.py  register.py  result_basic.py
(+433 files in other folders)
